feat(xray): add tor outbound setup
